feat: harden launch/runtime/robust subsystems and Compose UI
- launch: extend fakefx/AWT host, crash classifier, render path, engine options
- runtime: manager/source/extract/manifest improvements for JRE provisioning
- robust: cache/reporter/retry resilience; net mirror/DNS/client tuning
- plugins: validation/renderer/native_lib hardening
- ui: add AwtControl + MirrorMeasurer; refresh Compose screens/viewmodels/tests
- add scripts/check_awt_wire.py CI gate; gradle version catalog; zh-CN README

Submit to dev to trigger cloud CI Build and produce the release APK.